--- a/site.css
+++ b/site.css
@@ -10,55 +10,58 @@ html,
 body {
   font-family: Lato, -apple-system, BlinkMacSystemFont, Yu Gothic, YuGothic, Verdana, Meiryo, "M+ 1p", sans-serif;
   line-height: 1.5;
-  font-size: 16px
+  font-size: 16px;
 }
 
 @media(max-width:40em) {
   html,
   body {
-    font-size: 14px
+    font-size: 14px;
+  },
+  article > section img {
+    max-width: 100%;
   }
 }
 
 header {
   border-bottom-color: #3db680;
   border-bottom-width: 3px;
-  border-bottom-style: solid
+  border-bottom-style: solid;
 }
 
 header a,
 header a:hover {
   color: inherit;
-  text-decoration: none
+  text-decoration: none;
 }
 
 a {
   color: #0086ab;
-  text-decoration: none
+  text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline
+  text-decoration: underline;
 }
 
 article > header {
   border-bottom-color: #97d3e3;
   border-bottom-width: 1px;
-  border-bottom-style: solid
+  border-bottom-style: solid;
 }
 
 article > section {
-  word-wrap: break-word
+  word-wrap: break-word;
 }
 
 article > section img {
   display: block;
   margin: 15px 0;
-  max-width: 500px
+  max-width: 500px;
 }
 
 article > section iframe {
-  max-width: 100%
+  max-width: 100%;
 }
 
 article > section br {
@@ -67,18 +70,18 @@ article > section br {
   content: "\x20";
   height: 0;
   line-height: 0;
-  font-size: 0
+  font-size: 0;
 }
 
 article > section hr {
   border: none;
   border-bottom-color: #e0e0e0;
   border-bottom-width: 1px;
-  border-bottom-style: solid
+  border-bottom-style: solid;
 }
 
 article > footer {
   border-top-color: #97d3e3;
   border-top-width: 1px;
-  border-top-style: solid
+  border-top-style: solid;
 }
