--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,15 +20,21 @@
     </header>
     <nav class="center">
       <ul class="list-reset clearfix">
-        <li class="col col-4 inline-block px1 border-right">
-          <a href="{{site.baseurl}}/">Home</a>
-        </li>
-        <li class="col col-4 inline-block px1 border-right">
-          <a href="http://miyashita.com">Miyashita.com</a>
-        </li>
-        <li class="col col-4 inline-block px1">
-          <a href="http://research.miyashita.com">Research</a>
-        </li>
+        <a href="{{site.baseurl}}/">
+          <li class="col col-4 inline-block px1 border-right">
+            Home
+          </li>
+        </a>
+        <a href="http://miyashita.com">
+          <li class="col col-4 inline-block px1 border-right">
+            Miyashita.com
+          </li>
+        </a>
+        <a href="http://research.miyashita.com">
+          <li class="col col-4 inline-block px1">
+            Research
+          </li>
+        </a>
       </ul>
     </nav>
 
