--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="none" />
   {% feed_meta %}
   {% seo title=false %}
-  <link href='{{site.baseurl}}/site.css' rel='stylesheet' />
+  <link href='{{site.baseurl}}/dist/site.css' rel='stylesheet' />
 </head>
 <body>
   <div class="max-width-4 mx-auto">
