Add twitter button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   {% feed_meta %}
   {% seo title=false %}
   <link href='{{site.baseurl}}/dist/site.css' rel='stylesheet' />
+  <script src="https://platform.twitter.com/widgets.js" async></script>
 </head>
 <body>
   <div class="max-width-4 mx-auto">
