--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ section: blog
       <date class="pr2 h4">{{ page.date | date: '%Y.%m.%d' }}</date>
       <a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a>
     </h2>
-    <div class="p0">
+    <div class="p0 right-align">
       {% assign custom_url = site.url | append: site.baseurl %}
       {% assign full_base_url = site.github.url | default: custom_url %}
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{full_base_url}}{{page.url}}" data-text="{{page.title}} | 宮下研究室">Tweet</a>
